# MAVRIC

./: .gitignore  LICENSE  README.md  components.yaml  config.yaml  environment.yaml  pyproject.toml  snakefile.smk
VAREID/: __init__.py
VAREID/algo/detection/: bytetrack.yaml  detector_config.yaml  video_detector.py
VAREID/algo/ia_classification/: IA_classifier.py  IA_classifier_config.yaml  IA_filtering.py
VAREID/algo/import/: __init__.py  import_videos.py
VAREID/algo/postprocessing/: gui.py  postprocessing.py  postprocessing_config.yaml
VAREID/algo/species_identification/: species_identifier.py  species_identifier_config.yaml
VAREID/algo/viewpoint_classification/: viewpoint_classifier.py  viewpoint_classifier_config.yaml
VAREID/drivers/: dt_video_driver.py  fs_driver.py  iac_driver.py  iaf_driver.py  import_video_driver.py  lca_driver.py  mid_driver.py  post_driver.py  si_driver.py  vc_driver.py
VAREID/libraries/: constants.py  preproc.py  utils.py
VAREID/libraries/io/: con_funcs.py  format_funcs.py  logging.py  video_funcs.py  workflow_funcs.py
VAREID/libraries/ui/: db_scripts.py
VAREID/models/: README.md  verifiers_probs.json
