[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavric-video-pipeline"
version = "0.1.0"
description = "Video-only MAVRIC animal re-identification pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "albumentations>=2.0.4",
    "gradio",
    "lap>=0.5.12",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow>=10.3.0",
    "pyyaml",
    "scikit-learn>=1.5.1",
    "six>=1.16.0",
    "snakemake-minimal>=8.4.4",
    "timm>=1.0.7",
    "torch",
    "torchvision",
    "tqdm",
    "transformers>=4.49.0",
    "ultralytics",
]

[project.optional-dependencies]
species = [
    "pybioclip @ git+https://github.com/AidanWestphal/pybioclip",
]

[tool.setuptools]
packages = { find = { include = ["VAREID*"] } }
